Added readme. Changed to full-page-layout.

--- a/presentations/index.qmd
+++ b/presentations/index.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Presentations"
-format: html
+format: 
+    html:
+        page-layout: full
 ---
 
 | date       | title                                                                                    | preview
