Added wahlomat presentation in quarto format. Filled out the table.

--- a/presentations/index.qmd
+++ b/presentations/index.qmd
@@ -5,19 +5,15 @@ format:
         page-layout: full
 ---
 
-| date       | title                                                                                    | preview
-|------------|------------------------------------------------------------------------------------------|---------
-| 2021-10-06 | [Dataframes - Why data scientists don't use SQL](https://slides.com/andimai/dataframes) | <iframe src="https://slides.com/andimai/dataframes/embed?style=light" width="210rem" height="150rem" title="dataframes"> </iframe> |
-| 2020-11-18 | [Streamlit.io - A first look](https://slides.com/andimai/streamlit) | |
-| 2019-03-12 | [Test Driven Development für Datenwissenschaftler](https://slides.com/andimai/test-driven-development) | |
-| 2018-12-19 | [Continuous Delivery für Datenwissenschaftler](https://slides.com/andimai/continuous-delivery) | |
-| 2018-01-16 | [Python Type Hints](https://gist.github.com/asmaier/f2577460efa6270bdfc47738becc80a8)| <iframe src="python_type_hints"></iframe> |
-| 2017-10-17 | [Investigate political landscape (using Wahl-O-Mat data)](https://gist.github.com/asmaier/1e38c07464a2cf50e7180b159f74faa8) | |
+| date       | title | preview |
+|------------|-------|---------|
+| 2021-10-06 | [Dataframes - Why data scientists don't use SQL](https://slides.com/andimai/dataframes) | <iframe src="https://slides.com/andimai/dataframes/embed?style=light" width="210rem" height="150rem"></iframe> |
+| 2020-11-18 | [Streamlit.io - A first look](https://slides.com/andimai/streamlit) | <iframe src="https://slides.com/andimai/streamlit/embed?style=light" width="210rem" height="150rem"></iframe>|
+| 2019-03-12 | [Test Driven Development für Datenwissenschaftler](https://slides.com/andimai/test-driven-development) | <iframe src="https://slides.com/andimai/test-driven-development/embed?style=light" width="210rem" height="150rem"></iframe> |
+| 2018-12-19 | [Continuous Delivery für Datenwissenschaftler](https://slides.com/andimai/continuous-delivery) | <iframe src="https://slides.com/andimai/continuous-delivery/embed?style=light" width="210rem" height="150rem"></iframe> |
+| 2018-01-16 | [Python Type Hints](python_type_hints/index.qmd)| <iframe src="python_type_hints/index.html" width="210rem" height="150rem"></iframe> |
+| 2017-10-17 | [Investigate political landscape (using Wahl-O-Mat data)](wahl-o-mat-data/index.qmd) | <iframe src="wahl-o-mat-data/index.html" width="210rem" height="150rem"></iframe> |
 | 2015-08-29 | [Wir sind Bild!](https://gist.github.com/asmaier/932d08c5c96a2cd76f71) | |
-| 2015-04-09 | [Kanban vs. Scrum](https://slides.com/andimai/kanban-vs-scrum) | |
-| 2015-04-09 | [Was ist Kanban](https://slides.com/andimai/was-ist-kanban) | |
-: {tbl-colwidths="[15,55,30]"}
-
-
-
+| 2015-04-09 | [Kanban vs. Scrum](https://slides.com/andimai/kanban-vs-scrum) | <iframe src="https://slides.com/andimai/kanban-vs-scrum/embed?style=light" width="210rem" height="150rem"></iframe> |
+| 2015-04-09 | [Was ist Kanban](https://slides.com/andimai/was-ist-kanban) | <iframe src="https://slides.com/andimai/was-ist-kanban/embed?style=light" width="210rem" height="150rem" ></iframe> |
 
