Added presentation about demarchy.

--- a/presentations/index.qmd
+++ b/presentations/index.qmd
@@ -7,6 +7,7 @@ format:
 
 | date       | title | preview |
 |------------|-------|---------|
+| 2023-10-05 | [Democracy without Elections](demarchy/demarchy.qmd) | <iframe src="demarchy/demarchy.html" width="210rem" height="150rem"></iframe> |
 | 2022-07-21 | [Time Series Prediction Part I](timeseries/timeseries.qmd) | <iframe src="timeseries/timeseries.html" width="210rem" height="150rem"></iframe> |
 | 2022-06-30 | [Quarto - A successor to LaTeX?](quarto/quarto.qmd) | <iframe src="quarto/quarto.html" width="210rem" height="150rem"></iframe> |
 | 2021-10-06 | [Dataframes - Why data scientists don't use SQL](https://slides.com/andimai/dataframes) | <iframe src="https://slides.com/andimai/dataframes/embed?style=light" width="210rem" height="150rem"></iframe> |
